# jscpd-rs

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: release-gate.yml
docs/: api-parity.md  cloning-plan.md  compat-baseline.md  fallback-tokenizer.md  format-porting.md  junior-task-template.md  junior-workflow.md  npm-release.md  public-benchmark-suite.md  release-checklist.md  release-decisions.md  release-readiness.md  upstream-bugs.md  upstream-issue-drafts.md
examples/: dump_oxc_tokens.rs
npm/lib/: run-binary.js
npm/scripts/: postinstall.js
scripts/: bench.sh  check-format.sh  compare-reports.mjs  compat-blame.sh  compat-cli.sh  compat-config.sh  compat-matrix.sh  compat-reporters.sh  compat-server.sh  compat-upstream-ci.sh  compat.sh  junior-worktree.sh  npm-package-check.sh  package-check.sh  prepublish-check.sh  public-bench-suite.sh  release-candidate.sh  release-gate.sh  sync-formats.mjs
src/: app.rs  blame.rs  cli.rs  detector.rs  files.rs  formats.rs  lib.rs  main.rs  report.rs  server.rs  tokenizer.rs  tokenizer_fallback.rs  verbose.rs
src/cli/: config.rs  parsing.rs  tests.rs
src/detector/: matching.rs  model.rs  prepare.rs  skip_local.rs  statistics.rs  store.rs  tests.rs
src/detector/matching/: secondary.rs
src/files/: discovery.rs  gitignore.rs  paths.rs  shebang.rs  tests.rs
src/report/: ai.rs  badge.rs  console.rs  console_common.rs  console_full.rs  csv.rs  html.rs  json.rs  markdown.rs  sarif.rs  silent.rs  source.rs  summary.rs  test_support.rs  threshold.rs  xcode.rs  xml.rs
src/report/html/: assets.rs
src/server/: mcp.rs
src/tokenizer/: apex.rs  blocks.rs  embedded.rs  generic.rs  hash.rs  ignore.rs  line_index.rs  markdown.rs  markup_attrs.rs  oxc.rs  scan.rs  tap.rs  tests.rs
src/tokenizer/oxc/: fallback.rs  jsx.rs  kind.rs  lexical.rs
