[package]
name = "jscpd-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Fast Rust clone of jscpd"

[[bin]]
name = "jscpd-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
oxc_allocator = "0.133.0"
oxc_parser = { version = "0.133.0", features = ["benchmarking"] }
oxc_span = "0.133.0"
rayon = "1.11"
regex = "1.11"
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
